# win11toast-wheel-builder

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-win11toast.yml
