[project]
name = "win11toast-wheel-builder"
version = "0.1.0"
description = "Build wheels of `winsdk` and `win11toast`"
readme = "README.md"
authors = [
    { name = "Takayoshi Fukushima", email = "tk44fk40@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
